# guid

./: Cargo.toml  LICENSE-MIT  README.md
crates/guid-macro-impl/: Cargo.toml
crates/guid-macro-impl/src/: lib.rs
crates/guid-parser/: Cargo.toml
crates/guid-parser/src/: lib.rs
src/: lib.rs
