[package]
name = "guid-macro-impl"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
repository = "https://github.com/dherman/guid"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.4"
guid-parser = { version = "0.1", path = "../guid-parser" }
quote = "0.4.2"
chomp = "0.3.1"
syn = "0.12.12"
